{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 151,
  "lineage": "d03a0315-d7f3-e818-8c76-b07b13a01e2d",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_eip",
      "name": "api_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a5de4c30df3e6161",
            "association_id": "eipassoc-08759deb3b87f1f89",
            "domain": "vpc",
            "id": "eipalloc-0a5de4c30df3e6161",
            "instance": "i-07c1e42c1e3159798",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-05cab5818b4b1c779",
            "private_dns": "ip-10-1-1-193.eu-west-1.compute.internal",
            "private_ip": "10.1.1.193",
            "public_dns": "ec2-54-246-160-243.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.246.160.243",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "galaxy-api-eip"
            },
            "tags_all": {
              "Name": "galaxy-api-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "module.ec2.aws_iam_instance_profile.ec2_profile",
            "module.ec2.aws_iam_role.ec2_role",
            "module.ec2.aws_instance.api_server",
            "module.ec2.aws_key_pair.generated_key",
            "module.ec2.aws_security_group.api_sg",
            "module.ec2.aws_subnet.api_subnet",
            "module.ec2.aws_vpc.api_vpc",
            "module.ec2.data.aws_ami.amazon_linux",
            "module.ec2.tls_private_key.ssh_key",
            "module.rds.aws_db_instance.galaxy_db",
            "module.rds.aws_db_subnet_group.db_subnet_group",
            "module.rds.aws_security_group.db_sg",
            "module.rds.aws_subnet.db_subnet_1",
            "module.rds.aws_subnet.db_subnet_2",
            "module.rds.aws_vpc.db_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "api_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-066734adba283ab4b",
            "arn": "arn:aws:ec2:eu-west-1:958933916692:instance/i-07c1e42c1e3159798",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "galaxy-ec2-profile",
            "id": "i-07c1e42c1e3159798",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "galaxy-api-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05cab5818b4b1c779",
            "private_dns": "ip-10-1-1-193.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.193",
            "public_dns": "ec2-54-246-160-243.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.246.160.243",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-064afd5a03fb47c7a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08297853c79b6c865",
            "tags": {
              "Environment": "Production",
              "Name": "galaxy-api-server"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "galaxy-api-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-080e6260ea776f475"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "dependencies": [
            "module.ec2.aws_iam_instance_profile.ec2_profile",
            "module.ec2.aws_iam_role.ec2_role",
            "module.ec2.aws_key_pair.generated_key",
            "module.ec2.aws_security_group.api_sg",
            "module.ec2.aws_subnet.api_subnet",
            "module.ec2.aws_vpc.api_vpc",
            "module.ec2.data.aws_ami.amazon_linux",
            "module.ec2.tls_private_key.ssh_key",
            "module.rds.aws_db_instance.galaxy_db",
            "module.rds.aws_db_subnet_group.db_subnet_group",
            "module.rds.aws_security_group.db_sg",
            "module.rds.aws_subnet.db_subnet_1",
            "module.rds.aws_subnet.db_subnet_2",
            "module.rds.aws_vpc.db_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "api_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:958933916692:internet-gateway/igw-01c4c005ac6538be9",
            "id": "igw-01c4c005ac6538be9",
            "owner_id": "958933916692",
            "tags": {
              "Name": "api-igw"
            },
            "tags_all": {
              "Name": "api-igw"
            },
            "vpc_id": "vpc-0f62025671dd3a8eb"
          },
          "dependencies": [
            "module.ec2.aws_vpc.api_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "api_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:958933916692:route-table/rtb-0e45ce8a9be2355a1",
            "id": "rtb-0e45ce8a9be2355a1",
            "owner_id": "958933916692",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01c4c005ac6538be9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "api-rt"
            },
            "tags_all": {
              "Name": "api-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f62025671dd3a8eb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.aws_internet_gateway.api_igw",
            "module.ec2.aws_vpc.api_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "api_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-056ecc7bab7775bdf",
            "route_table_id": "rtb-0e45ce8a9be2355a1",
            "subnet_id": "subnet-08297853c79b6c865"
          },
          "dependencies": [
            "module.ec2.aws_internet_gateway.api_igw",
            "module.ec2.aws_route_table.api_rt",
            "module.ec2.aws_subnet.api_subnet",
            "module.ec2.aws_vpc.api_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "api_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:958933916692:security-group/sg-080e6260ea776f475",
            "description": "Allow web and SSH traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-080e6260ea776f475",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": ".NET API Ports",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5001
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "galaxy-api-sg",
            "name_prefix": "",
            "owner_id": "958933916692",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "galaxy-api-sg"
            },
            "tags_all": {
              "Name": "galaxy-api-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f62025671dd3a8eb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.aws_vpc.api_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "api_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:958933916692:subnet/subnet-08297853c79b6c865",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08297853c79b6c865",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "958933916692",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "api-subnet"
            },
            "tags_all": {
              "Name": "api-subnet"
            },
            "vpc_id": "vpc-0f62025671dd3a8eb"
          },
          "dependencies": [
            "module.ec2.aws_vpc.api_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "api_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:958933916692:vpc/vpc-0f62025671dd3a8eb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0e1edbe2af5987655",
            "default_route_table_id": "rtb-01191b2be723452a2",
            "default_security_group_id": "sg-01ed1fdfdad738db7",
            "dhcp_options_id": "dopt-09af779b290edc80d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f62025671dd3a8eb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01191b2be723452a2",
            "owner_id": "958933916692",
            "tags": {
              "Name": "api-vpc"
            },
            "tags_all": {
              "Name": "api-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "db_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:958933916692:internet-gateway/igw-0a8180aca80654a26",
            "id": "igw-0a8180aca80654a26",
            "owner_id": "958933916692",
            "tags": {
              "Name": "db-igw"
            },
            "tags_all": {
              "Name": "db-igw"
            },
            "vpc_id": "vpc-06fbfd9cb9f3f8a06"
          },
          "dependencies": [
            "module.rds.aws_vpc.db_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "db_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:958933916692:route-table/rtb-00dc523abb28f7305",
            "id": "rtb-00dc523abb28f7305",
            "owner_id": "958933916692",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a8180aca80654a26",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "db-rt"
            },
            "tags_all": {
              "Name": "db-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-06fbfd9cb9f3f8a06"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rds.aws_internet_gateway.db_igw",
            "module.rds.aws_vpc.db_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db_rta_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b08a511cba947103",
            "route_table_id": "rtb-00dc523abb28f7305",
            "subnet_id": "subnet-0f548ed3610395fcc"
          },
          "dependencies": [
            "module.rds.aws_internet_gateway.db_igw",
            "module.rds.aws_route_table.db_rt",
            "module.rds.aws_subnet.db_subnet_1",
            "module.rds.aws_vpc.db_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db_rta_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-094df0cd15e08c52a",
            "route_table_id": "rtb-00dc523abb28f7305",
            "subnet_id": "subnet-0d7a6b1d2bd10097d"
          },
          "dependencies": [
            "module.rds.aws_internet_gateway.db_igw",
            "module.rds.aws_route_table.db_rt",
            "module.rds.aws_subnet.db_subnet_2",
            "module.rds.aws_vpc.db_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:958933916692:security-group/sg-0b784047b1e3da4d5",
            "description": "Allow inbound traffic to the database",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b784047b1e3da4d5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "galaxy-db-sg",
            "name_prefix": "",
            "owner_id": "958933916692",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "galaxy-db-sg"
            },
            "tags_all": {
              "Name": "galaxy-db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06fbfd9cb9f3f8a06"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rds.aws_vpc.db_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:958933916692:subnet/subnet-0f548ed3610395fcc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f548ed3610395fcc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "958933916692",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "db-subnet-1"
            },
            "tags_all": {
              "Name": "db-subnet-1"
            },
            "vpc_id": "vpc-06fbfd9cb9f3f8a06"
          },
          "dependencies": [
            "module.rds.aws_vpc.db_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:958933916692:subnet/subnet-0d7a6b1d2bd10097d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d7a6b1d2bd10097d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "958933916692",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "db-subnet-2"
            },
            "tags_all": {
              "Name": "db-subnet-2"
            },
            "vpc_id": "vpc-06fbfd9cb9f3f8a06"
          },
          "dependencies": [
            "module.rds.aws_vpc.db_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "db_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:958933916692:vpc/vpc-06fbfd9cb9f3f8a06",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02c05f2b40c62f62c",
            "default_route_table_id": "rtb-059013d45fb5720b1",
            "default_security_group_id": "sg-01a063c617170e860",
            "dhcp_options_id": "dopt-09af779b290edc80d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06fbfd9cb9f3f8a06",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-059013d45fb5720b1",
            "owner_id": "958933916692",
            "tags": {
              "Name": "db-vpc"
            },
            "tags_all": {
              "Name": "db-vpc"
            }
          }
        }
      ]
    }
  ]
}